--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,12 @@
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
         <meta-data
-            android:name="com.google.android.geo.AIzaSyCsSSHUihBM385wF3MPqzWtaJtmFGuk5nA"
-            android:value="AIzaSyCsSSHUihBM385wF3MPqzWtaJtmFGuk5nA" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"      
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".MapsActivity"
