--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "com.google.android.libraries.places:places:1.1.0"
+    implementation 'com.google.android.libraries.places:places:2.0.0'
+    // Places SDK for Android KTX Library
+    implementation 'com.google.maps.android:places-ktx:2.0.0'
+    implementation 'com.google.android.libraries.places:places:2.6.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
