--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".PreferenceActivity"></activity>
         <activity android:name=".ViewProfileActivity"></activity>
+        <activity android:name=".EditProfileActivity"></activity>
     </application>
 
 </manifest>
