--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_maps">
             <intent-filter>
@@ -43,6 +43,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".PreferenceActivity"></activity>
+        <activity android:name=".ViewProfileActivity"></activity>
+        <activity android:name=".EditProfileActivity"></activity>
     </application>
 
 </manifest>
