--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,18 @@ android {
 
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
         manifestPlaceholders = [MAPS_API_KEY: "${properties.getProperty('MAPS_API_KEY')}"]
+
+        // Mapbox
+        multiDexEnabled true
+        testInstrumentationRunnerArguments clearPackageData: 'true'
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled = false
+            manifestPlaceholders = [enableCrashReporting: "false"]
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -37,6 +46,28 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+
+    // Mapbox
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    sourceSets {
+        main {
+            def srcDirs = file("$projectDir/src/main/java/com/example/arborparker")
+                    .listFiles({ it.isDirectory() } as FileFilter)
+                    .collect { it.name }
+
+            res.srcDirs = ['src/main/res']
+            srcDirs.forEach {
+                res.srcDirs += '/src/main/java/com/example/arborparker/' + it + '/res'
+            }
+        }
     }
 }
 
@@ -84,5 +115,25 @@ dependencies {
     def lifecycle_version = "2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+
+    // Mapbox Navigation SDK
+    implementation "com.mapbox.navigation:ui-app:2.9.0-rc.1"
+    implementation "com.mapbox.navigation:ui-dropin:2.9.0-rc.1"
+    implementation "com.mapbox.mapboxsdk:mapbox-android-core:5.0.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31"
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "com.google.android.material:material:1.5.0"
+    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "com.google.android.gms:play-services-location:19.0.1"
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation "com.squareup.leakcanary:leakcanary-android:2.8.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 }
