--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,11 +42,6 @@
             android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".CreateProfileActivity"></activity>
         <activity android:name=".MapsActivity"></activity>
@@ -54,6 +49,78 @@
         <activity android:name=".ViewProfileActivity"></activity>
         <activity android:name=".EditProfileActivity"></activity>
 
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".dropinui.NavigationViewActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".dropinui.CustomRuntimeStylingActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".dropinui.CustomNavigationViewOptionsActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomSpeedLimitActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomTripProgressActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomViewInjectionActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.ToggleThemeActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomInfoPanelActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomInfoPanelAttributesActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.RequestRouteWithNavigationViewActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.RepositionSpeedLimitActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomLongClickActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.HideViewsInFreeDriveActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomInfoPanelActiveGuidanceActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.CustomActionButtonsActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".dropinui.AddActionButtonsActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
