--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,13 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".LoginActivity">
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_maps">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".CreateProfileActivity"></activity>
         <activity android:name=".MapsActivity"></activity>
@@ -52,16 +58,12 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="true">
         </activity>
         <activity
             android:name=".dropinui.NavigationViewActivity"
-            android:exported="true"/>
+            android:exported="true">
+        </activity>
 
         <activity
             android:name=".dropinui.CustomRuntimeStylingActivity"
